# medical_kg

./: .coverage  .gitignore  MANIFEST.in  README.md  data_loader.py  environment.yml  example_usage.py  knowledge_graph_builder.py  main.py  main_optimized.py  main_rules_only.py  medical_ner.py  openrouter_client.py  pyproject.toml  relationship_extractor.py  requirements.txt  setup.py  soap_categorizer.py  test_json_parsing.py  text_preprocessor.py  visualization.py
scripts/: main.py  setup_environment.sh
src/soap_kg/: __init__.py  cli.py  config.py
src/soap_kg/core/: __init__.py  data_loader.py  knowledge_graph_builder.py  medical_ner.py  relationship_extractor.py  soap_categorizer.py
src/soap_kg/models/: __init__.py  soap_schema.py
src/soap_kg/utils/: __init__.py  api_client.py  json_parser.py  medical_nlp_client.py  openrouter_client.py  security.py  visualization.py
tests/: conftest.py  test_data_loader.py  test_medical_ner.py  test_relationship_extractor.py  test_simple_functionality.py  test_soap_categorizer.py  test_utils.py
