[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "soap-knowledge-graph"
version = "0.1.0"
description = "A Python package for constructing SOAP-organized knowledge graphs from clinical data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SOAP-KG Team", email = "your-email@example.com"},
]
keywords = ["medical", "nlp", "knowledge-graph", "soap", "clinical-data", "mimic", "healthcare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "networkx>=2.6",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "spacy>=3.4.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "tqdm>=4.62.0",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.15.0",
]
visualization = [
    "plotly>=5.0",
    "dash>=2.0",
    "kaleido>=0.2",
]
all = [
    "soap-knowledge-graph[dev,visualization]",
]

[project.scripts]
soap-kg = "soap_kg.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/soap-knowledge-graph"
Documentation = "https://soap-knowledge-graph.readthedocs.io/"
Repository = "https://github.com/your-username/soap-knowledge-graph.git"
"Bug Tracker" = "https://github.com/your-username/soap-knowledge-graph/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/soap_kg --cov-report=html --cov-report=term-missing"